--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,12 +11,12 @@
     <idea-version since-build="131"/>
 
     <actions>
-        <action id="CopyAsJson.Copy" class="com.riabchenko.CopyAction" text="Copy as JSON"
+        <action id="CopyAsJson.Copy" class="com.riabchenko.idea.JSONCopyAction" text="Copy as JSON"
                 description="Copies JSON representation of instance in Variables or Watches debug views">
-            <add-to-group group-id="Debugger.FramePanelPopup" anchor="last" />
-            <add-to-group group-id="Debugger.EvaluationDialogPopup" anchor="last" />
-            <add-to-group group-id="Debugger.InspectPanelPopup" anchor="last" />
-            <add-to-group group-id="Debugger.WatchesPanelPopup" anchor="last" />
+            <add-to-group group-id="Debugger.FramePanelPopup" relative-to-action="Debugger.CopyValue" anchor="after" />
+            <add-to-group group-id="Debugger.EvaluationDialogPopup" relative-to-action="Debugger.CopyValue" anchor="after" />
+            <add-to-group group-id="Debugger.InspectPanelPopup" relative-to-action="Debugger.CopyValue" anchor="after" />
+            <add-to-group group-id="Debugger.WatchesPanelPopup" relative-to-action="Debugger.CopyValue" anchor="after" />
         </action>
     </actions>
 </idea-plugin>
