--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-path.variable.maven_repository=C\:\\Users\\Denis V. Ryabchenko\\.m2\\repository
-jdk.home.idea_iu-133.696=C\:/Program Files (x86)/JetBrains/IntelliJ IDEA 13.0.2
-idea.home=C\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 13.0.2
+path.variable.maven_repository=c\:\\Users\\Denis_Riabchenko\\.m2\\repository
+jdk.home.idea_iu-133.696=c\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 14.0.3
+idea.home=c\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 14.0.3
 javac2.instrumentation.includeJavaRuntime=false
